HW 5.2 use ChainedTransactionManager